# nexus-video-ensaio

./: .gitignore  Barlow,Bebas_Neue,Space_Mono  GEMINI.md  Nexus_Renderer_Colab.ipynb  TRACE.md  Taskfile.yml  assets_config.json  commit_wrapper.sh  expand_icons.py  nexus_crawler.py  package-lock.json  package.json  pyproject.toml  run_commit.sh  screenshot.js  update_recorder.py
.agents/: AGENTS.md
.github/workflows/: render.yml
assets/: crawler_data.json  script_cold_war_words.json  sync_pulse_12min.json
conductor/: create-colab-notebook.md  generate_audio.py  render_headless.py  run_pipeline.py
docs/: HYBRID_SYNC_ARCHITECTURE.md  INTEGRACAO_AUDIO.md  INTEGRACAO_AUDIO_AUTO.md
docs/superpowers/plans/: 2026-06-03-gpu-particle-system.md  2026-06-03-particle-morphing-charts.md  2026-06-03-particle-morphing-icons.md  2026-06-03-particle-morphing-maps.md
pipeline/: Kokoro_WhisperX_Sync.ipynb  colab_render.py  director.py  events_map.json  generate_voice.py  master_script.json  narrative.json  nexus_watcher.py  sync.sh  test_director.py
pipeline/colab_export/: script.txt
research/html/: simula_o_de_part_culas_com_fluxo_de_rodovias.html  visualiza_o_avan_ada_de_part_culas_gemma.html  visualiza_o_org_nica_de_fluxo_gemma.html
research/notebooks/: Kokoro_WhisperX_Sync.ipynb  Nexus_Cloud_Render.ipynb
tools/Engine-Headless-Recorder/: TRACE.md  build_wasm.sh  package-lock.json  package.json
tools/Engine-Headless-Recorder/docs/: INTEGRATION.md  RENDERING_PIPELINE.md
web/: app.js  build.js  index.css  index.html
(+29 files in other folders)
